syntax = "proto3";
option go_package = "../go_proto;proto";
package proto;
import "data.proto";

enum Response {
  ResponseBeginIndex = 0;
}

enum ResultCode {
  Success = 0; //协议请求成功，其余失败
  Fail = 1;
  SuccessOK = 10000;
  TokenExpired = 401;
  Forbidden = 403;
}

message ResponsePkg {
  Response cmdId = 1; // 协议ID
  ResultCode code = 2; //返回码
  repeated Category categories = 3;
  ArticlesByCategoryOrTag articlesByCategoryOrTag = 4;
  repeated Tag tags = 5;
  repeated Message messages = 6;
  repeated FriendLink friendLinks = 7;
  CommentInfo commentInfo = 8;
  LoginResponse loginResponse = 9;//token
  string message = 10; //消息
  int64 serverTime = 11; //服务器时间
  repeated Article articleList = 12;
  BlogHomeInfo blogHomeInfo = 13;
  ArticleInfo articleInfo = 14;
  Archives archiveInfo = 15;
  About about = 16;
  repeated Reply replyList = 17;
  ScChat scChat = 18;
  repeated ScUserMenuMessage userMenu = 19;
  ScAdminHomeData adminHomeData = 20;
  ScArticleOptions articleOptions = 21;
  ScImage uploadImage = 22;
}

message ScImage{
  string key = 1;
}

message ScChat{
  uint32 type = 1;
  ScChatOnline scChatOnline = 2;
  ScChatMessage scChatMessage = 3;
}

message ScChatOnline{
  uint32 online = 2;
}

message ScChatMessage{
  string nickname = 1;
  string avatar = 2;
  string content = 3;
  uint32 userId = 4;
  uint32 type = 5;
  string ipAddr = 6;
  string ipSource = 7;
  int64 createTime = 8;
}

message ScUserMenuMessage{
  string name = 1;
  string path = 2;
  string component = 3;
  string icon = 4;
  bool isHidden = 5;
  repeated ScUserMenuMessage children = 6;
}

message ScAdminHomeData{
  int64 viewsCount = 1;
  int64 messageCount = 2;
  int64 userCount = 3;
  int64 articleCount = 4;
  repeated Category categoryList = 5;
  repeated UniqueView uniqueViewList = 6;
  repeated ArticleRank articleRankList = 7;
}

message ScArticleOptions{
  repeated Tag tagList = 1;
  repeated Category categoryList = 2;
}

